cmake_minimum_required(VERSION 3.26)
project(CppLearn)

set(CMAKE_CXX_STANDARD 17)



#add_executable(01city_link DataSructLearn/expr01/01city_link.cpp)
#add_executable(02joseph DataSructLearn/expr01/02joseph.cpp)
#add_executable(dec2oct DataSructLearn/expr02/dec2oct.c)

#add_executable(bracket_matching DataSructLearn/expr02/bracket_matching.c
#        DataSructLearn/expr03/bf_string.c)
#add_executable(bf_string DataSructLearn/expr03/bf_string.c)
#add_executable(ForTree DataSructLearn/expr04/ForTree.cpp)
#add_executable(graph_traverse DataSructLearn/expr05/graph_traverse.c)
#add_executable(expr01 auto_machine/expr01.c)
#add_executable(test01 auto_machine/test01.c)
#add_executable(test02 auto_machine/test02.cpp)
#add_executable(expr01 auto_machine/expr01.cpp
#        auto_machine/expr01.cpp)

#add_executable(expr01_test auto_machine/expr01.cpp)
#add_executable(expr02 auto_machine/expr01_archive.cpp)
#add_executable(expr02 auto_machine/expr02.cpp)
#add_executable(expr03 auto_machine/expr03.cpp)
#add_executable(bi_search_tree DataSructLearn/expr06/bi_search_tree.c)
#add_executable(hash_table DataSructLearn/expr06/hash_table.c)
#add_executable(base_sort DataSructLearn/02/base_sort.c)
add_executable(quick_sort DataSructLearn/expr07/quick_sort.c)
add_executable(heap_sort DataSructLearn/expr07/heap_sort.c)
add_executable(test01 DataSructLearn/expr07/test01.c)
add_executable(test02 DataSructLearn/expr07/test02.c)